k8s/app-manifest/j26-keycloak-scoutid/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: j26-keycloak-scoutid
  labels:
    app.kubernetes.io/part-of: j26-keycloak-scoutid
